# hazel-hue

./: .env.example  .gitignore  .replit  DEPLOYMENT.md  Dockerfile  MODERNIZATION.md  PLAN.md  README.md  analysis-logs.txt  app.json  build-background.sh  demo-true-winter-results.md  docker-compose.yml  eas.json  eslint.config.js  jest.config.cjs  jest.config.components.cjs  makeup-palettes-display.html  metro.config.cjs  metro.config.js  nginx.conf  package-lock.json  package.json  pyproject.toml  ranking-strategy.md  replit.md  robots.txt  seo-championship-analysis.md  seo-championship-summary.md  sitemap.xml  tailwind.config.js  tailwind.config.ts  test-analysis.js  test_compliant_analysis.js  test_compliant_debug.js  test_direct_analysis.js  test_emma_stone_analysis.js  test_flask_analysis.js  test_logging_system.js  test_o3_access.js  (+6 more)
.plan/: affiliate-integration.md  rework-architecture.md
_legacy/: DEPLOYMENT_GUIDE.md  GITHUB_MIGRATION_GUIDE.md  build-optimized.js  debug.html  deploy.sh  docker-compose.yml  robots.txt  tailwind.config.ts  tiktok-pixel-gtm-setup.md
app/: +not-found.tsx  _layout.tsx
attached_assets/: Pasted--1-dependencies-echo-openai-1-30-0-flask-3-0-3-requirements-txt-echo-requirements-txt-1751747226267_1751747226268.txt  Pasted--BRIGHT-SPRING-PAGE-1-Overview-Key-Characteristics-Signature-Colors-Colors-to-Avoid--1750810981512_1750810981512.txt  Pasted--BRIGHT-WINTER-PAGE-1-Overview-Key-Characteristics-Signature-Colors-Colors-to-Avoid--1750641880572_1750641880572.txt  Pasted--COPY-FROM-THIS-LINE-TO-1751675648930_1751675648932.txt  (+36 more)
(+461 files in other folders)
