[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.3",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "openai>=1.30.0",
    "opencv-python-headless>=4.11.0.86",
    "scikit-image>=0.25.2",
]
